--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/nav_home"
         android:title="@string/nav_home"
-        android:icon="@drawable/ic_baseline_devices_24">
+        android:icon="@drawable/ic_round_home_24">
     </item>
-    <item android:id="@+id/nav_message"
-        android:title="@string/nav_message"
-        android:icon="@drawable/ic_outline_home_24">
+    <item android:id="@+id/nav_center"
+        android:title="@string/nav_null">
     </item>
-    <item android:id="@+id/nav_person"
-        android:title="@string/nav_person"
-        android:icon="@drawable/ic_baseline_person_24">
-
+    <item android:id="@+id/nav_setting"
+        android:title="@string/nav_setting"
+        android:icon="@drawable/ic_round_settings_24">
     </item>
 </menu>
