--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="light_white">#F6F6F9FF</color>
+    <color name="light_white">#F3F4F8</color>
+
+    <color name="main_color">#7F85F9</color>
+    <color name="second_color">#F9B23D</color>
+    <color name="text_color">#171935</color>
+    <color name="icon_color">#A2A9B8</color>
+    <color name="fill_bg_color">#EAEDF2</color>
+    <color name="background_color">#fafafa</color>
 </resources>
