--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="light_white">#F3F4F8</color>
 
     <color name="main_color">#7F85F9</color>
+    <color name="main_color_primary_variant">#8c92fb</color>
+    <color name="main_color_primary_secondary">#5e64bf</color>
     <color name="second_color">#F9B23D</color>
     <color name="text_color">#171935</color>
     <color name="icon_color">#A2A9B8</color>
