--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -9,26 +9,26 @@
         android:background="@color/background_color">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:paddingTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingTop="20dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/home_appbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/home_cardView"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/home_cardView">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/home_icon"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginStart="35dp"
+                    android:layout_marginStart="30dp"
                     android:layout_marginTop="10dp"
                     android:src="@drawable/icon"
                     app:layout_constraintStart_toStartOf="parent"
@@ -42,16 +42,16 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="35dp"
                     android:background="@drawable/circle_bg"
+                    android:contentDescription="To jump to notification page"
                     android:src="@drawable/ic_outline_notifications_active_24"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:contentDescription="To jump to notification page" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/home_username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="35dp"
+                    android:layout_marginStart="30dp"
                     android:layout_marginTop="60dp"
                     android:layout_marginBottom="10dp"
                     android:maxLines="1"
@@ -66,29 +66,29 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.cardview.widget.CardView
-                app:cardCornerRadius="15dp"
-                app:cardBackgroundColor="@color/main_color"
                 android:id="@+id/home_cardView"
-                android:layout_marginHorizontal="25dp"
-                app:layout_constraintTop_toBottomOf="@+id/home_appbar"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                app:cardBackgroundColor="@color/main_color"
+                app:cardCornerRadius="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/home_appbar">
 
                 <androidx.appcompat.widget.LinearLayoutCompat
-                    android:orientation="vertical"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_margin="15dp"
+                        android:layout_margin="10dp"
                         android:background="@drawable/circle_retangle_bg"
                         android:backgroundTint="@color/main_color_primary_variant"
-                        android:padding="10dp">
+                        android:padding="5dp">
 
                         <TextView
                             android:id="@+id/home_cardView_title"
@@ -97,7 +97,7 @@
                             android:layout_alignParentStart="true"
                             android:layout_centerVertical="true"
                             android:layout_marginStart="0dp"
-                            android:paddingStart="15dp"
+                            android:paddingStart="5dp"
                             android:text="@string/home_card_title"
                             android:textColor="@color/white"
                             android:textSize="18sp"
@@ -124,9 +124,9 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="15dp"
                         android:layout_marginBottom="10dp"
-                        android:paddingStart="15dp"
-                        android:layout_marginHorizontal="15dp">
+                        android:paddingStart="15dp">
 
                         <ImageButton
                             android:layout_width="40dp"
@@ -141,12 +141,49 @@
             </androidx.cardview.widget.CardView>
 
             <com.google.android.material.tabs.TabLayout
+                android:id="@+id/home_tablayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:paddingHorizontal="5dp"
+                android:background="@drawable/circle_retangle_bg"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/home_cardView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                app:tabIndicator="@drawable/circle_retangle_bg"
+                app:tabIndicatorColor="@color/second_color"
+                app:tabIndicatorGravity="center"
+                app:tabIndicatorHeight="35dp"
+                app:tabMinWidth="80dp"
+                app:tabMaxWidth="90dp"
+                app:tabMode="auto"
+                app:tabRippleColor="@android:color/transparent"
+                app:tabSelectedTextColor="@color/white"
+                app:tabTextColor="@color/black">
+
+                <com.google.android.material.tabs.TabItem
+                    android:id="@+id/home_tab_rooms"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_tab1" />
+
+                <com.google.android.material.tabs.TabItem
+                    android:id="@+id/home_tab_devices"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_tab2" />
 
             </com.google.android.material.tabs.TabLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/home_tablayout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginHorizontal="20dp"
+                android:id="@+id/home_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
