--- a/app/src/main/res/drawable/switch_bg_false.xml
+++ b/app/src/main/res/drawable/switch_bg_false.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#5e64bf"/>
+    <solid android:color="@color/icon_color"/>
     <corners android:radius="90dp" />
 </shape>
